# two-filters

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build-plugin.yml
cmake/: basic_installer_clapfirst.cmake  compile-options.cmake
doc/: ack.md  manual.md
libs/: CMakeLists.txt
resources/: NightlyBlurb.md  ReadmeZip.txt  TwoFiltersIcon.icns
resources/factory_patches/Effects/: Dirtifier.twofl  FlangoPhaz.twofl  Pad Life.twofl  Phase Pad II.twofl  Phase Pad.twofl  Pulsing Tremolo.twofl  Sea Flange.twofl  Spatial Phaser.twofl  Try it on Drums.twofl  Xpander Phase.twofl
resources/factory_patches/Self Playing/: Beeps and Boops.twofl  Hats or Claves You Decide.twofl
resources/factory_patches/Stereo/: Autopan.twofl  (+6 more)
resources/installer_mac/: SideQuestIcon.icns  TwoFiltersIcon.icns  icns.rsrc  make_rsrc.sh
scripts/: denew.pl  fix_file_comments.pl  fix_header_guards.pl  make_icon.py
src/: configuration.h
src/clap/: plugin-clap-entry-impl.cpp  plugin-clap-entry-impl.h  plugin-clap-entry.cpp  plugin-clap.cpp
src/engine/: engine.cpp  engine.h  patch.cpp  patch.h  steplfo_songpos.h  voice.cpp  voice.h
src/presets/: preset-manager.cpp  preset-manager.h
src/ui/: about-screen.cpp  about-screen.h  debug-panel.cpp  debug-panel.h  filter-panel.cpp  filter-panel.h  main-panel.cpp  main-panel.h  patch-data-bindings.h  plugin-editor.cpp  plugin-editor.h  preset-data-binding.h  routing-panel.cpp  routing-panel.h  steplfo-panel.cpp  steplfo-panel.h  ui-defaults.h
tests/: CMakeLists.txt  dsp_basics.cpp  patch_sync.cpp  test_main.cpp
(+5 files in other folders)
